modified code for full gpr model

--- a/Spatio_temporal_modelling/09-09-2020 Cross Validation.ipynb
+++ b/Spatio_temporal_modelling/09-09-2020 Cross Validation.ipynb
@@ -1446,8 +1446,7 @@
    "source": [
     "rmse_list = []\n",
     "for i in range(len(longs)):\n",
-    "    cross_validation(longs[i], lats[i],i)\n",
-    "    print ('location ', i, 'done!')"
+    "    cross_validation(longs[i], lats[i],i)"
    ]
   },
   {
